setup home page components

--- a/src/app/pages/home/home/home.html
+++ b/src/app/pages/home/home/home.html
@@ -1,1 +1,6 @@
-<p>home works!</p>
+<div>
+  <app-landing></app-landing>
+  <app-features></app-features>
+  <app-pricing></app-pricing>
+  <app-contact></app-contact>
+</div>
