--- a/src/app/pages/home/contact/contact.html
+++ b/src/app/pages/home/contact/contact.html
@@ -1,1 +1,77 @@
-<p>contact works!</p>
+<!-- Main Footer Container-->
+<footer class="bg-[#002D4B] py-20 text-white">
+  <!-- wrapper to make it look good -->
+  <div class="container mx-auto px-4 lg:px-8">
+    <!-- div for footer elements-->
+    <div
+      class="flex flex-col items-start justify-between gap-12 md:flex-row md:items-start"
+    >
+      <!-- Div for logo, header-->
+      <div class="mb-8 px-4 py-4 md:mb-0">
+        <div class="flex items-center gap-2">
+          <div class="h-auto w-[63px] flex-shrink-0">
+            <img src="images/logo-coloured.svg" alt="Maestro Logo Icon" />
+          </div>
+
+          <h2 class="font-serif text-7xl font-bold leading-tight text-white">
+            Maestro
+          </h2>
+        </div>
+        <p class="mt-2 text-2xl text-gray-400">
+          Your Personalized Learning Companion
+        </p>
+      </div>
+      <!-- Quick links/Contact Info -->
+      <div class="flex flex-col md:flex-row md:space-x-24">
+        <div class="flex-grow">
+          <h3 class="mb-4 text-xl font-medium text-[#EAAA08]">Quick Links</h3>
+          <ul class="space-y-3 text-base text-gray-300">
+            <li>
+              <a href="#" class="hover:text-white">Home</a>
+            </li>
+            <li>
+              <a href="#" class="hover:text-white">Features</a>
+            </li>
+            <li>
+              <a href="#" class="hover:text-white">Pricing</a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="flex-grow">
+          <h3 class="mb-4 text-xl font-medium text-[#EAAA08]">
+            Contact Information
+          </h3>
+          <p class="flex items-center space-x-2 text-base text-gray-300">
+            <img src="images/EnvelopeSimple.png" />
+            <span>info@maestro.org</span>
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <!-- Line-->
+    <hr class="my-12 border-t border-gray-700" />
+
+    <!-- Copyright and Social Media Links (Bottom of Footer) -->
+    <div
+      class="flex flex-col items-center justify-between gap-8 md:flex-row md:items-end"
+    >
+      <p class="text-xl text-gray-500">
+        &copy; 2025 Maestro. All rights reserved.
+      </p>
+      <!-- sm icons-->
+      <div class="flex space-x-4">
+        <a href="#" target="_blank">
+          <img src="images/linkedin.png" alt="linkedin icon" />
+        </a>
+        <a href="#" target="_blank">
+          <img src="images/facebook.png" alt="facebook icon" />
+        </a>
+        <a href="#" target="_blank">
+          <img src="images/insta.png" alt="instagram icon" />
+        </a>
+      </div>
+    </div>
+  </div>
+</footer>
