feat(landing): wire up navigation events and signup routing

--- a/src/app/pages/home/home/home.html
+++ b/src/app/pages/home/home/home.html
@@ -1,5 +1,5 @@
 <div>
-  <app-landing></app-landing>
+  <app-landing (navigateSection)="scrollTo($event)"></app-landing>
   <app-features></app-features>
   <app-pricing></app-pricing>
   <app-contact></app-contact>
