patches to landing page functionality

--- a/src/app/pages/home/home/home.html
+++ b/src/app/pages/home/home/home.html
@@ -1,6 +1,6 @@
 <div>
-  <app-landing (navigateSection)="scrollTo($event)"></app-landing>
-  <app-features></app-features>
-  <app-pricing></app-pricing>
-  <app-contact></app-contact>
+  <app-landing (navigateSection)="scrollTo($event)" id="top"></app-landing>
+  <app-features id="features"></app-features>
+  <app-pricing id="pricing"></app-pricing>
+  <app-contact id="contact"></app-contact>
 </div>
