--- a/src/app/pages/lesson/chatbot/chatbot.html
+++ b/src/app/pages/lesson/chatbot/chatbot.html
@@ -11,7 +11,7 @@
         [class]="`rounded-xl p-2 my-1 break-words text-sm ${(chat.sender === 'user') ? 'self-end bg-prussian-blue-800 text-white' : 'self-start bg-prussian-blue-200 text-prussian-blue-900'}`"
         style="max-width: 80%;"
       >
-        <markdown [data]="chat.message"></markdown>
+      <span [innerHTML]="chat.message | markdown"></span>
       </div>
     }
   </div>
