--- a/src/app/pages/lesson/practice/practice.html
+++ b/src/app/pages/lesson/practice/practice.html
@@ -3,10 +3,7 @@
     Question {{getQuestionNumber()}}
   </h1>
   <div class="w-full p-4">
-    <markdown class="mb-2 text-gray-800" [data]="question.text"></markdown>
-    <!-- <h2 class="mb-2 text-gray-800">
-      {{question.text}}
-    </h2> -->
+    <h2 class="mb-2 text-gray-800" [innerHTML]="question.text | markdown"></h2>
     @if (question.type === 'essay') {
       <textarea
         class="w-full p-2 text-gray-600 border-b-2 border-gray-300 resize-none overflow-hidden focus:outline-none focus:border-b-2 focus:border-prussian-blue-800"
@@ -20,12 +17,12 @@
       @if (currentView().content.score) {
         <div class="w-full my-2 text-gray-500">
           <strong><em>Feedback: </em></strong>
-          <markdown class="" [data]="question.essay_feedback"></markdown>
+          <span [innerHTML]="question.essay_feedback | markdown"></span>
         </div>
       }
     } @else {
       @for (option of question.options; track option.id) {
-        <div>
+        <div class="flex flex-row">
           <input 
             [type]="`${question.type === 'multiple choice' ? 'radio' : 'checkbox'}`" 
             [name]="question.id" 
@@ -38,16 +35,15 @@
           >
           <label 
             [for]="option.id" 
-            [class]="`text-gray-600 cursor-pointer 
+            [class]="`text-gray-600 cursor-pointer
             ${!(currentView().content.score == null) ? (option.correct ? 'text-green-600' : (option.selected? 'text-red-600' : '')) : ''}`"
+            [innerHTML]="option.text | markdown"
             >
-            <!-- <markdown class="inline" [data]="option.text"></markdown> -->
-            {{option.text}}
           </label>
         </div>
         @if (!(currentView().content.score == null)) {
           <div class="w-full my-1 text-gray-500">
-            <strong><em><markdown class="" [data]="option.explanation"></markdown></em></strong>
+            <strong><em><span [innerHTML]="option.explanation | markdown"></span></em></strong>
           </div>
         }
       }
