added loading spinner to slow loading chokepoints

--- a/src/app/pages/lesson/chatbot/chatbot.html
+++ b/src/app/pages/lesson/chatbot/chatbot.html
@@ -36,4 +36,6 @@
       Send
     </button>
   </div>
+
+  <img src="images/spinner.gif" alt="" class="absolute bottom-3 right-2 h-8 mx-2" [hidden]="!loading">
 </div>
