--- a/src/app/pages/subject-create/naming-upload/naming-upload.html
+++ b/src/app/pages/subject-create/naming-upload/naming-upload.html
@@ -88,14 +88,20 @@
       </div>
     }
 
-    <button 
-      type="submit" 
-      class="w-max bg-prussian-blue-800 hover:bg-prussian-blue-500 disabled:bg-prussian-blue-500 text-white flex flex-row items-center px-5 py-3 rounded-md text-sm" 
-      (click)="onSubmit()"
-      [disabled]="loading"
-    >
-      Create New Subject
-      <img src="images/create-subject-icon.svg" alt="" class="w-4 ml-3">
-    </button>
+    <div>
+      <button 
+        type="submit" 
+        class="w-max bg-prussian-blue-800 hover:bg-prussian-blue-500 disabled:bg-prussian-blue-500 text-white flex flex-row items-center px-5 py-3 rounded-md text-sm" 
+        (click)="onSubmit()"
+        [disabled]="loading"
+      >
+        Create New Subject
+        <img src="images/create-subject-icon.svg" alt="" class="w-4 ml-3">
+      </button>
+      <div [class]="`flex flex-row items-center ${loading ? '' : 'hidden'}`">
+        <img src="images/spinner.gif" alt="" class="w-8 h-8 mx-2">
+        loading...
+      </div>
+    </div>
   </form>
 </div>
