--- a/src/app/pages/home/contact/contact.html
+++ b/src/app/pages/home/contact/contact.html
@@ -44,7 +44,7 @@
           </h3>
           <p class="flex items-center space-x-2 text-base text-gray-300">
             <img src="images/EnvelopeSimple.png" />
-            <span>info@maestro.org</span>
+            <span>maestroaidevs@gmail.com</span>
           </p>
         </div>
       </div>
