--- a/src/app/pages/home/landing/landing.html
+++ b/src/app/pages/home/landing/landing.html
@@ -16,7 +16,7 @@
           alt="Maestro Logo"
           class="h-8 w-8 sm:h-10 sm:w-10"
         />
-        <span class="font-serif text-2xl sm:text-4xl font-bold text-white"
+        <span class="font-serif text-2xl sm:text-4xl font-medium text-white"
           >Maestro</span
         >
       </div>
