--- a/src/app/pages/home/pricing/pricing.html
+++ b/src/app/pages/home/pricing/pricing.html
@@ -20,7 +20,7 @@
     <div
       class="flex h-full flex-1 flex-col items-start rounded-[32px] border border-[#BFBFBF] bg-white p-8 px-6 text-center shadow-lg md:mt-24"
     >
-      <h3 class="text-2xl font-semibold text-[#264653]">Starter</h3>
+      <h3 class="text-2xl font-semibold text-[#264653]">Basic</h3>
       <div class="mt-2 text-4xl font-bold text-[#264653]">
         <span>₦</span>0<span class="text-sm font-normal text-gray-500"
           >/per month</span
@@ -68,7 +68,7 @@
           ★ Most Popular
         </p>
       </div>
-      <h3 class="mt-4 text-2xl font-semibold">Pro</h3>
+      <h3 class="mt-4 text-2xl font-semibold">Standard</h3>
       <div class="mt-2 text-4xl font-bold">
         <span>₦</span>6000<span class="text-sm font-normal text-gray-400"
           >/per month</span
