fix: replace alerts with toast notifications across app; update docs and file upload handlers

--- a/docs/components/Login.html
+++ b/docs/components/Login.html
@@ -216,6 +216,9 @@
                                 <a href="#loading" >loading</a>
                             </li>
                             <li>
+                                <a href="#notify" >notify</a>
+                            </li>
+                            <li>
                                 <a href="#password" >password</a>
                             </li>
                             <li>
@@ -266,7 +269,7 @@
                 </tr>
                         <tr>
                             <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="20" class="link-to-prism">src/app/pages/auth/login/login.ts:20</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="22" class="link-to-prism">src/app/pages/auth/login/login.ts:22</a></div>
                             </td>
                         </tr>
 
@@ -333,8 +336,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="33"
-                                    class="link-to-prism">src/app/pages/auth/login/login.ts:33</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="35"
+                                    class="link-to-prism">src/app/pages/auth/login/login.ts:35</a></div>
                         </td>
                     </tr>
 
@@ -370,8 +373,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="25"
-                                    class="link-to-prism">src/app/pages/auth/login/login.ts:25</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="27"
+                                    class="link-to-prism">src/app/pages/auth/login/login.ts:27</a></div>
                         </td>
                     </tr>
 
@@ -411,7 +414,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="20" class="link-to-prism">src/app/pages/auth/login/login.ts:20</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="22" class="link-to-prism">src/app/pages/auth/login/login.ts:22</a></div>
                         </td>
                     </tr>
 
@@ -442,7 +445,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="12" class="link-to-prism">src/app/pages/auth/login/login.ts:12</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="13" class="link-to-prism">src/app/pages/auth/login/login.ts:13</a></div>
                         </td>
                     </tr>
 
@@ -478,7 +481,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="17" class="link-to-prism">src/app/pages/auth/login/login.ts:17</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="19" class="link-to-prism">src/app/pages/auth/login/login.ts:19</a></div>
                         </td>
                     </tr>
 
@@ -503,7 +506,32 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="15" class="link-to-prism">src/app/pages/auth/login/login.ts:15</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="16" class="link-to-prism">src/app/pages/auth/login/login.ts:16</a></div>
+                        </td>
+                    </tr>
+
+
+        </tbody>
+    </table>
+    <table class="table table-sm table-bordered">
+        <tbody>
+            <tr>
+                <td class="col-md-4">
+                    <a name="notify"></a>
+                    <span class="name">
+                        <span ><b>notify</b></span>
+                        <a href="#notify"><span class="icon ion-ios-link"></span></a>
+                    </span>
+                </td>
+            </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <i>Default value : </i><code>inject(NotificationService)</code>
+                    </td>
+                </tr>
+                    <tr>
+                        <td class="col-md-4">
+                                <div class="io-line">Defined in <a href="" data-line="17" class="link-to-prism">src/app/pages/auth/login/login.ts:17</a></div>
                         </td>
                     </tr>
 
@@ -534,7 +562,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="13" class="link-to-prism">src/app/pages/auth/login/login.ts:13</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="14" class="link-to-prism">src/app/pages/auth/login/login.ts:14</a></div>
                         </td>
                     </tr>
 
@@ -570,7 +598,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="18" class="link-to-prism">src/app/pages/auth/login/login.ts:18</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="20" class="link-to-prism">src/app/pages/auth/login/login.ts:20</a></div>
                         </td>
                     </tr>
 
@@ -601,7 +629,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="14" class="link-to-prism">src/app/pages/auth/login/login.ts:14</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="15" class="link-to-prism">src/app/pages/auth/login/login.ts:15</a></div>
                         </td>
                     </tr>
 
@@ -618,6 +646,7 @@
 import { FormsModule, NgModel } from &#x27;@angular/forms&#x27;;
 import { Router } from &#x27;@angular/router&#x27;;
 import { AuthService } from &#x27;../../../core/services/auth.service&#x27;;
+import { NotificationService } from &#x27;../../../core/services/notification.service&#x27;; // &lt;-- Add this import
 
 @Component({
   selector: &#x27;app-login&#x27;,
@@ -629,6 +658,7 @@ export class Login {
   password &#x3D; &#x27;&#x27;;
   passwordVisible &#x3D; &quot;password&quot;;
   loading &#x3D; false;
+  notify &#x3D; inject(NotificationService); // &lt;-- Inject notification service
 
   @ViewChild(&#x27;emailCtrl&#x27;) emailCtrl!: NgModel;
   @ViewChild(&#x27;passwordCtrl&#x27;) passwordCtrl!: NgModel;
@@ -650,7 +680,7 @@ export class Login {
     this.loading &#x3D; true;
     // Later: replace with real API call
     if (this.emailCtrl.invalid || this.passwordCtrl.invalid) {
-      alert(&quot;Valid email and password required&quot;);
+      this.notify.showError(&quot;Valid email and password required&quot;);
     } else {
       this.authService.login({ email: this.email, password: this.password }).subscribe({
         next: (response) &#x3D;&gt; {
@@ -663,7 +693,7 @@ export class Login {
         },
         error: (error) &#x3D;&gt; {
           console.error(&#x27;Login failed&#x27;, error);
-          alert(&#x27;Invalid email or password&#x27;);
+          this.notify.showError(&#x27;Invalid email or password&#x27;);
         }
       });
     }
