--- a/docs/components/App.html
+++ b/docs/components/App.html
@@ -169,6 +169,7 @@
                 <td class="col-md-9">
                             <code>RouterOutlet</code>
                                 <code><a href="../components/Toast.html" target="_self" >Toast</a></code>
+                                <code><a href="../components/Header.html" target="_self" >Header</a></code>
                 </td>
             </tr>
 
@@ -256,7 +257,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="12" class="link-to-prism">src/app/app.ts:12</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="13" class="link-to-prism">src/app/app.ts:13</a></div>
                         </td>
                     </tr>
 
@@ -272,10 +273,11 @@
         <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { Component, signal } from &#x27;@angular/core&#x27;;
 import { RouterOutlet } from &#x27;@angular/router&#x27;;
 import { Toast } from &quot;./shared/components/toast/toast&quot;;
+import { Header } from &quot;./shared/components/header/header&quot;;
 
 @Component({
   selector: &#x27;app-root&#x27;,
-  imports: [RouterOutlet, Toast],
+  imports: [RouterOutlet, Toast, Header],
   templateUrl: &#x27;./app.html&#x27;,
   styleUrl: &#x27;./app.css&#x27;
 })
@@ -286,7 +288,8 @@ export class App {
     </div>
 
     <div class="tab-pane fade " id="templateData">
-        <pre class="line-numbers"><code class="language-html">&lt;main&gt;
+        <pre class="line-numbers"><code class="language-html">&lt;app-header&gt;&lt;/app-header&gt;
+&lt;main&gt;
   &lt;router-outlet /&gt;
 &lt;/main&gt;
 &lt;app-toast&gt;&lt;/app-toast&gt;</code></pre>
@@ -318,7 +321,7 @@ export class App {
 <script src="../js/libs/htmlparser.js"></script>
 <script src="../js/libs/deep-iterator.js"></script>
 <script>
-        var COMPONENT_TEMPLATE = '<div><main>  <router-outlet /></main><app-toast></app-toast></div>'
+        var COMPONENT_TEMPLATE = '<div><app-header></app-header><main>  <router-outlet /></main><app-toast></app-toast></div>'
     var COMPONENTS = [{'name': 'About', 'selector': 'app-about'},{'name': 'App', 'selector': 'app-root'},{'name': 'Chatbot', 'selector': 'app-chatbot'},{'name': 'ConfirmLogout', 'selector': 'app-confirm-logout'},{'name': 'Contact', 'selector': 'app-contact'},{'name': 'CreationStepTab', 'selector': 'app-creation-step-tab'},{'name': 'Features', 'selector': 'app-features'},{'name': 'Header', 'selector': 'app-header'},{'name': 'Home', 'selector': 'app-home'},{'name': 'Landing', 'selector': 'app-landing'},{'name': 'LessonPage', 'selector': 'app-lesson-page'},{'name': 'Login', 'selector': 'app-login'},{'name': 'NamingUpload', 'selector': 'app-naming-upload'},{'name': 'NotFound', 'selector': 'app-not-found'},{'name': 'Practice', 'selector': 'app-practice'},{'name': 'Pricing', 'selector': 'app-pricing'},{'name': 'QuestionSettings', 'selector': 'app-question-settings'},{'name': 'Sidebar', 'selector': 'app-sidebar'},{'name': 'Signup', 'selector': 'app-signup'},{'name': 'Subjects', 'selector': 'app-subjects'},{'name': 'Subscription', 'selector': 'app-subscription'},{'name': 'Subtopic', 'selector': 'app-subtopic'},{'name': 'Toast', 'selector': 'app-toast'},{'name': 'TopicPreferences', 'selector': 'app-topic-preferences'},{'name': 'VerifyEmail', 'selector': 'app-verify-email'}];
     var DIRECTIVES = [{'name': 'FileTypeDirective', 'selector': '[appFileType]'},{'name': 'PasswordValidator', 'selector': '[appPasswordValidator]'}];
     var ACTUAL_COMPONENT = {'name': 'App'};
