--- a/docs/components/QuestionSettings.html
+++ b/docs/components/QuestionSettings.html
@@ -218,6 +218,9 @@
                                 <a href="#loading" >loading</a>
                             </li>
                             <li>
+                                <a href="#notify" >notify</a>
+                            </li>
+                            <li>
                                 <a href="#subjectId" >subjectId</a>
                             </li>
                             <li>
@@ -267,7 +270,7 @@
                 </tr>
                         <tr>
                             <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="32" class="link-to-prism">src/app/pages/subject-create/question-settings/question-settings.ts:32</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="34" class="link-to-prism">src/app/pages/subject-create/question-settings/question-settings.ts:34</a></div>
                             </td>
                         </tr>
 
@@ -346,8 +349,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="57"
-                                    class="link-to-prism">src/app/pages/subject-create/question-settings/question-settings.ts:57</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="59"
+                                    class="link-to-prism">src/app/pages/subject-create/question-settings/question-settings.ts:59</a></div>
                         </td>
                     </tr>
 
@@ -383,8 +386,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="49"
-                                    class="link-to-prism">src/app/pages/subject-create/question-settings/question-settings.ts:49</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="51"
+                                    class="link-to-prism">src/app/pages/subject-create/question-settings/question-settings.ts:51</a></div>
                         </td>
                     </tr>
 
@@ -450,8 +453,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="41"
-                                    class="link-to-prism">src/app/pages/subject-create/question-settings/question-settings.ts:41</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="43"
+                                    class="link-to-prism">src/app/pages/subject-create/question-settings/question-settings.ts:43</a></div>
                         </td>
                     </tr>
 
@@ -521,7 +524,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="29" class="link-to-prism">src/app/pages/subject-create/question-settings/question-settings.ts:29</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="30" class="link-to-prism">src/app/pages/subject-create/question-settings/question-settings.ts:30</a></div>
                         </td>
                     </tr>
 
@@ -546,7 +549,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="28" class="link-to-prism">src/app/pages/subject-create/question-settings/question-settings.ts:28</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="29" class="link-to-prism">src/app/pages/subject-create/question-settings/question-settings.ts:29</a></div>
                         </td>
                     </tr>
 
@@ -571,7 +574,32 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="30" class="link-to-prism">src/app/pages/subject-create/question-settings/question-settings.ts:30</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="31" class="link-to-prism">src/app/pages/subject-create/question-settings/question-settings.ts:31</a></div>
+                        </td>
+                    </tr>
+
+
+        </tbody>
+    </table>
+    <table class="table table-sm table-bordered">
+        <tbody>
+            <tr>
+                <td class="col-md-4">
+                    <a name="notify"></a>
+                    <span class="name">
+                        <span ><b>notify</b></span>
+                        <a href="#notify"><span class="icon ion-ios-link"></span></a>
+                    </span>
+                </td>
+            </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <i>Default value : </i><code>inject(NotificationService)</code>
+                    </td>
+                </tr>
+                    <tr>
+                        <td class="col-md-4">
+                                <div class="io-line">Defined in <a href="" data-line="34" class="link-to-prism">src/app/pages/subject-create/question-settings/question-settings.ts:34</a></div>
                         </td>
                     </tr>
 
@@ -602,7 +630,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="31" class="link-to-prism">src/app/pages/subject-create/question-settings/question-settings.ts:31</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="32" class="link-to-prism">src/app/pages/subject-create/question-settings/question-settings.ts:32</a></div>
                         </td>
                     </tr>
 
@@ -627,7 +655,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="32" class="link-to-prism">src/app/pages/subject-create/question-settings/question-settings.ts:32</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="33" class="link-to-prism">src/app/pages/subject-create/question-settings/question-settings.ts:33</a></div>
                         </td>
                     </tr>
 
@@ -647,6 +675,7 @@ import { FormsModule } from &#x27;@angular/forms&#x27;;
 import { Router } from &#x27;@angular/router&#x27;;
 import { SubjectsService } from &#x27;../../../core/services/subjects.service&#x27;;
 import { forkJoin, Observable } from &#x27;rxjs&#x27;;
+import { NotificationService } from &#x27;../../../core/services/notification.service&#x27;; // &lt;-- Add this import
 
 class ExerciseSettings {
   include: boolean &#x3D; false
@@ -672,6 +701,7 @@ export class QuestionSettings {
   loading &#x3D; false;
   subjectId &#x3D; &#x27;&#x27;;
   subjectService &#x3D; inject(SubjectsService)
+  notify &#x3D; inject(NotificationService); // &lt;-- Inject notification service
 
   constructor(private router: Router, private cdr: ChangeDetectorRef) {
     // Extract subjectId from the route parameters
@@ -704,12 +734,12 @@ export class QuestionSettings {
     // Validate exercise fields
     if (this.exerciseSettings.include) {
       if (this.exerciseSettings.questionTypes.length &#x3D;&#x3D; 0) {
-        alert(&quot;Choose at least one question type for the exercises&quot;);
+        this.notify.showError(&quot;Choose at least one question type for the exercises&quot;);
         this.loading &#x3D; false;
         return;
       }
       if (!this.exerciseSettings.preference) {
-        alert(&quot;Exercise preference cannot be empty&quot;);
+        this.notify.showError(&quot;Exercise preference cannot be empty&quot;);
         this.loading &#x3D; false;
         return;
       }
@@ -719,12 +749,12 @@ export class QuestionSettings {
     // Validate exam fields
     if (this.examSettings.include) {
       if (this.examSettings.questionTypes.length &#x3D;&#x3D; 0) {
-        alert(&quot;Choose at least one question type for the exam&quot;);
+        this.notify.showError(&quot;Choose at least one question type for the exam&quot;);
         this.loading &#x3D; false;
         return;
       }
       if (!this.examSettings.preference) {
-        alert(&quot;Exam preference cannot be empty&quot;);
+        this.notify.showError(&quot;Exam preference cannot be empty&quot;);
         this.loading &#x3D; false;
         return;
       }
