--- a/docs/components/Toast.html
+++ b/docs/components/Toast.html
@@ -502,10 +502,12 @@ export class Toast {
     </div>
 
     <div class="tab-pane fade " id="templateData">
-        <pre class="line-numbers"><code class="language-html">&lt;div *ngIf&#x3D;&quot;msg()&quot; [ngClass]&#x3D;&quot;classes()&quot;&gt;
-  &lt;span class&#x3D;&quot;flex-1&quot;&gt;{{ msg() }}&lt;/span&gt;
-  &lt;button (click)&#x3D;&quot;close()&quot; class&#x3D;&quot;font-bold&quot;&gt;✕&lt;/button&gt;
-&lt;/div&gt;
+        <pre class="line-numbers"><code class="language-html">@if(msg()) {
+  &lt;div [ngClass]&#x3D;&quot;classes()&quot;&gt;
+    &lt;span class&#x3D;&quot;flex-1&quot;&gt;{{ msg() }}&lt;/span&gt;
+    &lt;button (click)&#x3D;&quot;close()&quot; class&#x3D;&quot;font-bold&quot;&gt;✕&lt;/button&gt;
+  &lt;/div&gt;
+}
 </code></pre>
     </div>
 
@@ -535,7 +537,7 @@ export class Toast {
 <script src="../js/libs/htmlparser.js"></script>
 <script src="../js/libs/deep-iterator.js"></script>
 <script>
-        var COMPONENT_TEMPLATE = '<div><div *ngIf="msg()" [ngClass]="classes()">  <span class="flex-1">{{ msg() }}</span>  <button (click)="close()" class="font-bold">✕</button></div></div>'
+        var COMPONENT_TEMPLATE = '<div>@if(msg()) {  <div [ngClass]="classes()">    <span class="flex-1">{{ msg() }}</span>    <button (click)="close()" class="font-bold">✕</button>  </div>}</div>'
     var COMPONENTS = [{'name': 'About', 'selector': 'app-about'},{'name': 'App', 'selector': 'app-root'},{'name': 'Chatbot', 'selector': 'app-chatbot'},{'name': 'ConfirmLogout', 'selector': 'app-confirm-logout'},{'name': 'Contact', 'selector': 'app-contact'},{'name': 'CreationStepTab', 'selector': 'app-creation-step-tab'},{'name': 'Features', 'selector': 'app-features'},{'name': 'Header', 'selector': 'app-header'},{'name': 'Home', 'selector': 'app-home'},{'name': 'Landing', 'selector': 'app-landing'},{'name': 'LessonPage', 'selector': 'app-lesson-page'},{'name': 'Login', 'selector': 'app-login'},{'name': 'NamingUpload', 'selector': 'app-naming-upload'},{'name': 'NotFound', 'selector': 'app-not-found'},{'name': 'Practice', 'selector': 'app-practice'},{'name': 'Pricing', 'selector': 'app-pricing'},{'name': 'QuestionSettings', 'selector': 'app-question-settings'},{'name': 'Sidebar', 'selector': 'app-sidebar'},{'name': 'Signup', 'selector': 'app-signup'},{'name': 'Subjects', 'selector': 'app-subjects'},{'name': 'Subscription', 'selector': 'app-subscription'},{'name': 'Subtopic', 'selector': 'app-subtopic'},{'name': 'Toast', 'selector': 'app-toast'},{'name': 'TopicPreferences', 'selector': 'app-topic-preferences'},{'name': 'VerifyEmail', 'selector': 'app-verify-email'}];
     var DIRECTIVES = [{'name': 'FileTypeDirective', 'selector': '[appFileType]'},{'name': 'PasswordValidator', 'selector': '[appPasswordValidator]'}];
     var ACTUAL_COMPONENT = {'name': 'Toast'};
