--- a/docs/components/TopicPreferences.html
+++ b/docs/components/TopicPreferences.html
@@ -228,6 +228,9 @@
                                 <a href="#loading" >loading</a>
                             </li>
                             <li>
+                                <a href="#notify" >notify</a>
+                            </li>
+                            <li>
                                 <a href="#old_topics" >old_topics</a>
                             </li>
                             <li>
@@ -283,7 +286,7 @@
                 </tr>
                         <tr>
                             <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="66" class="link-to-prism">src/app/pages/subject-create/topic-preferences/topic-preferences.ts:66</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="68" class="link-to-prism">src/app/pages/subject-create/topic-preferences/topic-preferences.ts:68</a></div>
                             </td>
                         </tr>
 
@@ -362,8 +365,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="83"
-                                    class="link-to-prism">src/app/pages/subject-create/topic-preferences/topic-preferences.ts:83</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="85"
+                                    class="link-to-prism">src/app/pages/subject-create/topic-preferences/topic-preferences.ts:85</a></div>
                         </td>
                     </tr>
 
@@ -399,8 +402,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="99"
-                                    class="link-to-prism">src/app/pages/subject-create/topic-preferences/topic-preferences.ts:99</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="101"
+                                    class="link-to-prism">src/app/pages/subject-create/topic-preferences/topic-preferences.ts:101</a></div>
                         </td>
                     </tr>
 
@@ -436,8 +439,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="75"
-                                    class="link-to-prism">src/app/pages/subject-create/topic-preferences/topic-preferences.ts:75</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="77"
+                                    class="link-to-prism">src/app/pages/subject-create/topic-preferences/topic-preferences.ts:77</a></div>
                         </td>
                     </tr>
 
@@ -513,7 +516,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="23" class="link-to-prism">src/app/pages/subject-create/topic-preferences/topic-preferences.ts:23</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="24" class="link-to-prism">src/app/pages/subject-create/topic-preferences/topic-preferences.ts:24</a></div>
                         </td>
                     </tr>
 
@@ -549,7 +552,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="25" class="link-to-prism">src/app/pages/subject-create/topic-preferences/topic-preferences.ts:25</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="26" class="link-to-prism">src/app/pages/subject-create/topic-preferences/topic-preferences.ts:26</a></div>
                         </td>
                     </tr>
 
@@ -574,7 +577,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="66" class="link-to-prism">src/app/pages/subject-create/topic-preferences/topic-preferences.ts:66</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="67" class="link-to-prism">src/app/pages/subject-create/topic-preferences/topic-preferences.ts:67</a></div>
                         </td>
                     </tr>
 
@@ -599,7 +602,32 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="26" class="link-to-prism">src/app/pages/subject-create/topic-preferences/topic-preferences.ts:26</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="27" class="link-to-prism">src/app/pages/subject-create/topic-preferences/topic-preferences.ts:27</a></div>
+                        </td>
+                    </tr>
+
+
+        </tbody>
+    </table>
+    <table class="table table-sm table-bordered">
+        <tbody>
+            <tr>
+                <td class="col-md-4">
+                    <a name="notify"></a>
+                    <span class="name">
+                        <span ><b>notify</b></span>
+                        <a href="#notify"><span class="icon ion-ios-link"></span></a>
+                    </span>
+                </td>
+            </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <i>Default value : </i><code>inject(NotificationService)</code>
+                    </td>
+                </tr>
+                    <tr>
+                        <td class="col-md-4">
+                                <div class="io-line">Defined in <a href="" data-line="68" class="link-to-prism">src/app/pages/subject-create/topic-preferences/topic-preferences.ts:68</a></div>
                         </td>
                     </tr>
 
@@ -666,7 +694,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="27" class="link-to-prism">src/app/pages/subject-create/topic-preferences/topic-preferences.ts:27</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="28" class="link-to-prism">src/app/pages/subject-create/topic-preferences/topic-preferences.ts:28</a></div>
                         </td>
                     </tr>
 
@@ -697,7 +725,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="24" class="link-to-prism">src/app/pages/subject-create/topic-preferences/topic-preferences.ts:24</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="25" class="link-to-prism">src/app/pages/subject-create/topic-preferences/topic-preferences.ts:25</a></div>
                         </td>
                     </tr>
 
@@ -722,7 +750,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="65" class="link-to-prism">src/app/pages/subject-create/topic-preferences/topic-preferences.ts:65</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="66" class="link-to-prism">src/app/pages/subject-create/topic-preferences/topic-preferences.ts:66</a></div>
                         </td>
                     </tr>
 
@@ -753,7 +781,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="64" class="link-to-prism">src/app/pages/subject-create/topic-preferences/topic-preferences.ts:64</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="65" class="link-to-prism">src/app/pages/subject-create/topic-preferences/topic-preferences.ts:65</a></div>
                         </td>
                     </tr>
 
@@ -774,6 +802,7 @@ import { Router } from &#x27;@angular/router&#x27;;
 import { TopicModel } from &#x27;../../../core/models/topic.model&#x27;;
 import { SubjectsService } from &#x27;../../../core/services/subjects.service&#x27;;
 import { LessonService } from &#x27;../../../core/services/lesson.service&#x27;;
+import { NotificationService } from &#x27;../../../core/services/notification.service&#x27;; // &lt;-- Add this import
 
 type Topic &#x3D; {
   id: string,
@@ -832,6 +861,7 @@ export class TopicPreferences implements OnInit {
   topics: TopicModel[] &#x3D; [];
   subjectService &#x3D; inject(SubjectsService)
   lessonService &#x3D; inject(LessonService)
+  notify &#x3D; inject(NotificationService)
 
   constructor(private router: Router, private cdr: ChangeDetectorRef) {
     // Extract subjectId from the route parameters
@@ -859,7 +889,7 @@ export class TopicPreferences implements OnInit {
       },
       error: (err) &#x3D;&gt; {
         console.error(&#x27;Error fetching topics:&#x27;, err);
-        alert(&quot;Failed to load topics. Please try again later.&quot;);
+        this.notify.showError(&quot;Failed to load topics. Please try again later.&quot;);
       }
     });
   }
@@ -868,12 +898,12 @@ export class TopicPreferences implements OnInit {
     const selectedTopics &#x3D; this.topics.filter((topic) &#x3D;&gt; topic.selected);
     this.loading &#x3D; true;
     if (selectedTopics.length &#x3D;&#x3D; 0) {
-      alert(&quot;At least one topic must be selected&quot;);
+      this.notify.showError(&quot;At least one topic must be selected&quot;);
       this.loading &#x3D; false;
       return
     }
     if (this.learningStyleCtrl.invalid) {
-      alert(&quot;Learning Style is required&quot;);
+      this.notify.showError(&quot;Learning Style is required&quot;);
       this.loading &#x3D; false;
       return
     }
@@ -897,7 +927,7 @@ export class TopicPreferences implements OnInit {
 
           error: (err) &#x3D;&gt; {
             console.error(&#x27;Error generating lesson:&#x27;, err);
-            alert(&quot;Failed to generate lesson. Please try again later.&quot;);
+            this.notify.showError(&quot;Failed to generate lesson. Please try again later.&quot;);
             this.loading &#x3D; false;
           }
         });
@@ -905,7 +935,7 @@ export class TopicPreferences implements OnInit {
       
       error: (err) &#x3D;&gt; {
         console.error(&#x27;Error selecting topics:&#x27;, err);
-        alert(&quot;Failed to select topics. Please try again later.&quot;);
+        this.notify.showError(&quot;Failed to select topics. Please try again later.&quot;);
         this.loading &#x3D; false;
       }
     });
